kubernetes/services/n8n.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nodemation
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 5678
  selector:
    app: nodemation

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodemation
  namespace: default
spec:
  tls:
    - hosts:
        - n8n.${DOMAIN_NAME}
      secretName: ${DOMAIN_NAME}-tls
  rules:
    - host: n8n.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodemation
                port:
                  name: web

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodemation
  namespace: default
  labels:
    app: nodemation
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@weekly"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodemation
  template:
    metadata:
      labels:
        app: nodemation
    spec:
      containers:
        - name: app
          image: docker.n8n.io/n8nio/n8n:latest
          resources:
            requests:
              memory: 128Mi
              cpu: 250m
            limits:
              memory: 256Mi
              cpu: 500m
          ports:
            - name: web
              containerPort: 5678
